--- a/leo-satellite-observer.html
+++ b/leo-satellite-observer.html
@@ -51,7 +51,6 @@
         min-width: 200px;
       }
 
-      /* Header alignment */
       .floating h2 {
         display: flex;
         align-items: flex-start;
@@ -128,22 +127,22 @@
         gap: 15px;
         margin-top: 10px;
       }
-        .sat-label {
-            background-color: rgba(255,255,255,0.8);
-            border-radius: 3px;
-            padding: 2px 4px;
-            font-size: 12px;
-            font-weight: bold;
-            color: black;
-            white-space: nowrap;
-        }
+
+      .sat-label {
+          background-color: rgba(255,255,255,0.8);
+          border-radius: 3px;
+          padding: 2px 4px;
+          font-size: 12px;
+          font-weight: bold;
+          color: black;
+          white-space: nowrap;
+      }
 
       * { outline: none !important; }
     </style>
   </head>
 
   <body>
-    <!-- Unified floating panel -->
     <div class="floating">
       <h2>
         <img src="img/AO07logo.png" alt="LEO logo">
@@ -160,23 +159,22 @@
       <button onclick="initMap(document.getElementById('grid-locator').value)">Plot your Range</button>
 
       <div class="observer-buttons">
-          <button onclick="window.open('https://dxer.site', '_blank')" style="padding:6px;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
-            </svg>
-          </button>
+        <button onclick="window.open('https://dxer.site', '_blank')" style="padding:6px;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
+          </svg>
+        </button>
         <button onclick="window.open('https://dxer.site/greencube-observer.html', '_blank')">MEO</button>
         <button onclick="window.open('https://dxer.site/qo-100-satellite-observer.html', '_blank')">GEO</button>
         <button onclick="window.open('https://dxer.site/eme-observer/', '_blank')">EME</button>
       </div>
     </div>
 
-    <!-- Map container -->
     <div id="map"></div>
 
     <script>
       var map;
-      var layerGroup;
+      var markersCluster; // Global so we can toggle it
       const BLINKING_GIF_URL = 'img/rover1.gif?v=1';
 
       function destinationPoint(lat, lon, distance, bearing) {
@@ -213,16 +211,9 @@
 
       function initMap(gridLocator) {
         if (map) map.remove();
-        map = L.map('map', {
-          center: [0, 0],
-          zoom: 2,
-          zoomControl: false,
-          attributionControl: true
-        });
-        
-        L.control.zoom({
-                position: 'bottomright'
-            }).addTo(map);
+        map = L.map('map', { center: [0, 0], zoom: 2, zoomControl: false, attributionControl: true });
+
+        L.control.zoom({ position: 'bottomright' }).addTo(map);
 
         var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
           attribution: 'Map data © <a href="https://openstreetmap.org">OpenStreetMap</a> contributors',
@@ -235,13 +226,8 @@
 
         maidenhead.addTo(map);
 
-        L.control.layers({ 'Map': osm }, {
-          "<span style='color: black'>CQ Zones</span>": cqzones,
-          "<span style='color: black'>QTH Locators</span>": maidenhead
-        }).addTo(map);
-
-
-        var markersCluster = L.markerClusterGroup({
+        // MarkerCluster for all stations
+        markersCluster = L.markerClusterGroup({
           spiderfyOnMaxZoom: true,
           showCoverageOnHover: false,
           maxClusterRadius: 10
@@ -264,11 +250,7 @@
               if (time <= new Date()) return;
 
               const marker = L.marker([lat, lng], {
-                icon: L.icon({
-                  iconUrl: BLINKING_GIF_URL,
-                  iconSize: [16, 16],
-                  iconAnchor: [10, 10]
-                })
+                icon: L.icon({ iconUrl: BLINKING_GIF_URL, iconSize: [16, 16], iconAnchor: [10, 10] })
               });
 
               marker.bindPopup(`<div><a href="https://hams.at/alerts" target="_blank">${callsign[1]}</a></div>`);
@@ -297,11 +279,7 @@
                   const markers = callsigns[key];
                   const markerIcon = markers[0].markerIcon;
                   const marker = L.marker([lat, lng], {
-                    icon: L.icon({
-                      iconUrl: markerIcon,
-                      iconSize: [16, 16],
-                      iconAnchor: [10, 10]
-                    }),
+                    icon: L.icon({ iconUrl: markerIcon, iconSize: [16, 16], iconAnchor: [10, 10] }),
                     title: markers.map(m => m.callsign).join(", ")
                   });
 
@@ -310,6 +288,7 @@
                   markersCluster.addLayer(marker);
                 }
 
+                // Add markersCluster to map
                 map.addLayer(markersCluster);
               });
           });
@@ -331,7 +310,6 @@
           ];
 
           circles.forEach(circle => {
-              // Draw footprint
               L.greatCircle([coords.lat, coords.lng], {
                   radius: circle.radius,
                   color: circle.strokeColor || "#FF0000",
@@ -349,14 +327,23 @@
                   icon: L.divIcon({
                       className: 'sat-label',
                       html: circle.label,
-                      iconSize: [40, 20], // adjust width/height as needed
-                      iconAnchor: [20, 10] // center the label over the point
+                      iconSize: [40, 20],
+                      iconAnchor: [20, 10]
                   }),
-                  interactive: false // makes it not clickable
+                  interactive: false
               }).addTo(map);
-
           });
         }
+
+        // Add layer control with stations toggle
+        L.control.layers(
+          { 'Map': osm },
+          {
+            "<span style='color: black'>CQ Zones</span>": cqzones,
+            "<span style='color: black'>QTH Locators</span>": maidenhead,
+            "<span style='color: black'>Stations</span>": markersCluster
+          }
+        ).addTo(map);
       }
 
       initMap('');
