--- a/qo-100-satellite-observer.html
+++ b/qo-100-satellite-observer.html
@@ -180,232 +180,7 @@
     <div id="map"></div>
 
     <script>
-      var map;
-      var layerGroup;
-      const BLINKING_GIF_URL = 'img/rover1.gif?v=1';
-
-      function destinationPoint(lat, lon, distance, bearing) {
-        const R = 6371000;
-        const rad = Math.PI / 180;
-        const deg = 180 / Math.PI;
-        lat = lat * rad;
-        lon = lon * rad;
-        bearing = bearing * rad;
-        const d = distance / R;
-        const lat2 = Math.asin(Math.sin(lat) * Math.cos(d) + Math.cos(lat) * Math.sin(d) * Math.cos(bearing));
-        const lon2 = lon + Math.atan2(Math.sin(bearing) * Math.sin(d) * Math.cos(lat),
-                                      Math.cos(d) - Math.sin(lat) * Math.sin(lat2));
-        return { lat: lat2 * deg, lng: lon2 * deg };
-      }
-
-        function calculateCoordinates(gridLocator) {
-            gridLocator = gridLocator.toUpperCase();
-            var gridLocatorPattern = /^[A-R]{2}\d{2}[A-X]{2}$/i;
-            if (!gridLocatorPattern.test(gridLocator)) {
-                alert("Invalid grid locator format. Please enter a valid 6-character grid locator.");
-                return null;
-            }
-
-            // Latitude calculation
-            var lat = -90
-                + (gridLocator.charCodeAt(1) - 65) * 10        // Field
-                + parseInt(gridLocator.charAt(3))             // Square
-                + (gridLocator.charCodeAt(5) - 65) / 24       // Subsquare
-                + 1/48;                                       // Center of subsquare
-
-            // Longitude calculation
-            var lon = -180
-                + (gridLocator.charCodeAt(0) - 65) * 20       // Field
-                + parseInt(gridLocator.charAt(2)) * 2         // Square
-                + (gridLocator.charCodeAt(4) - 65) / 12       // Subsquare
-                + 1/24;                                       // Center of subsquare
-
-            return { lat: lat, lng: lon };
-        }
-
-      function initMap(gridLocator) {
-        if (map) map.remove();
-        map = L.map('map', {
-          center: [0, 0],
-          zoom: 2,
-          zoomControl: false,
-          attributionControl: true
-        });
-        
-        L.control.zoom({
-                position: 'bottomright'
-            }).addTo(map);
-
-        var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          attribution: 'Map data © <a href="https://openstreetmap.org">OpenStreetMap</a> contributors',
-          minZoom: 0,
-          maxZoom: 10
-        }).addTo(map);
-
-        var cqzones = L.cqzones();
-        var maidenhead = L.maidenhead();
-
-        maidenhead.addTo(map);
-
-        L.control.layers({ 'Map': osm }, {
-          "<span style='color: black'>CQ Zones</span>": cqzones,
-          "<span style='color: black'>QTH Locators</span>": maidenhead
-        }).addTo(map);
-
-        // Draw default circle at page load
-        const defaultCircle = {
-          center: { lat: 0.0, lng: 25.8110 },
-          radius: 9050000,
-          strokeColor: "#D95F45",  // optional: choose a color
-          fillOpacity: 0.05,
-          angle: 0 // angle for optional label placement
-        };
-
-        // Draw the circle
-        L.greatCircle([defaultCircle.center.lat, defaultCircle.center.lng], {
-            radius: defaultCircle.radius,
-            color: defaultCircle.strokeColor,
-            fillOpacity: defaultCircle.fillOpacity,
-            weight: 3,
-            wrapElements: true,
-            clipLat: 85,
-            degStep: 0.5,
-            maxCopies: -1
-        }).addTo(map);
-
-        // Draw outer shadow
-        const shadowWidth = 150000; // 100 km in meters
-        L.greatCircle([defaultCircle.center.lat, defaultCircle.center.lng], {
-            radius: defaultCircle.radius + shadowWidth,  // outer radius
-            color: "#000000",       // shadow color
-            fillOpacity: 0.1,      // low opacity
-            weight: 0,              // no border line
-            wrapElements: true,
-            clipLat: 85,
-            degStep: 0.5,
-            maxCopies: -1
-        }).addTo(map);
-
-
-        var markersCluster = L.markerClusterGroup({
-          spiderfyOnMaxZoom: true,
-          showCoverageOnHover: false,
-          maxClusterRadius: 20
-        });
-
-        // Load announcements
-        fetch('announcements_filtered.txt')
-          .then(response => response.text())
-          .then(data => {
-            const announcements = data.trim().split('\n');
-            announcements.forEach(announcement => {
-              const coordinates = announcement.match(/Coordinates: \((.*), (.*)\)/);
-              const timeString = announcement.match(/Time: ([^,]*)/);
-              const callsign = announcement.match(/Callsign: ([^,]*)/);
-              if (!coordinates || !timeString || !callsign) return;
-
-              const lat = parseFloat(coordinates[1]);
-              const lng = parseFloat(coordinates[2]);
-              const time = new Date(timeString[1]);
-              if (time <= new Date()) return;
-
-              const marker = L.marker([lat, lng], {
-                icon: L.icon({
-                  iconUrl: BLINKING_GIF_URL,
-                  iconSize: [16, 16],
-                  iconAnchor: [10, 10]
-                })
-              });
-
-              marker.bindPopup(`<div><a href="https://hams.at/alerts" target="_blank">${callsign[1]}</a></div>`);
-              markersCluster.addLayer(marker);
-            });
-
-            // Load main QO-100 markers
-            fetch("output_qo100.txt")
-              .then(response => response.text())
-              .then(data => {
-                const regex = /TRP: ([^,]+), Date: ([^,]+), Callsign: ([^,]+), Grid locator: ([^,]+), Coord: \(([^,]+), ([^)]+)\)/g;
-                const callsigns = {};
-                let match;
-                while ((match = regex.exec(data)) !== null) {
-                  const callsign = match[3];
-                  const dxgridlocator = match[4];
-                  const lat = parseFloat(match[5]);
-                  const lng = parseFloat(match[6]);
-                  const key = `${lat},${lng}`;
-                  if (!callsigns[key]) callsigns[key] = [];
-                  callsigns[key].push({ callsign, dxgridlocator, markerIcon: "img/176096839586434633.png" });
-                }
-
-                for (const key in callsigns) {
-                  const [lat, lng] = key.split(",");
-                  const markers = callsigns[key];
-                  const markerIcon = markers[0].markerIcon;
-                  const marker = L.marker([lat, lng], {
-                    icon: L.icon({
-                      iconUrl: markerIcon,
-                      iconSize: [16, 16],
-                      iconAnchor: [10, 10]
-                    }),
-                    title: markers.map(m => m.callsign).join(", ")
-                  });
-
-                  const popupHtml = `<div>${markers.map(m => `<a href="https://www.qrz.com/db/${m.callsign}" target="_blank">${m.callsign}</a>`).join(", ")}</div>`;
-                  marker.bindPopup(popupHtml);
-                  markersCluster.addLayer(marker);
-                }
-
-                map.addLayer(markersCluster);
-              });
-          });
-
-        // Draw satellite footprints
-        if (gridLocator) {
-          const coords = calculateCoordinates(gridLocator);
-          if (!coords) return;
-          L.marker([coords.lat, coords.lng], { title: gridLocator }).addTo(map);
-
-          const circles = [
-            { radius: 4970000, label: "SO-50", angle: 265 },
-            { radius: 7502000, label: "FO-29", angle: 245 },
-            { radius: 8042000, label: "RS-44", angle: 225 },
-            { radius: 3940000, label: "ISS", angle: 275 },
-            { radius: 7907000, label: "AO-07", angle: 235 },
-            { radius: 5712000, label: "AO-91", angle: 255 },
-            { radius: 13000000, label: "IO-117", angle: 185, strokeColor: "#808080", fillOpacity: 0.0 }
-          ];
-
-          circles.forEach(circle => {
-              // Draw footprint
-              L.greatCircle([coords.lat, coords.lng], {
-                  radius: circle.radius,
-                  color: circle.strokeColor || "#FF0000",
-                  fillOpacity: circle.fillOpacity !== undefined ? circle.fillOpacity : 0.05,
-                  weight: 1,
-                  wrapElements: true,
-                  clipLat: 85,
-                  degStep: 0.5,
-                  maxCopies: -1
-              }).addTo(map);
-
-              const labelPoint = destinationPoint(coords.lat, coords.lng, circle.radius, circle.angle-125);
-
-              L.marker([labelPoint.lat, labelPoint.lng], {
-                  icon: L.divIcon({
-                      className: 'sat-label',
-                      html: circle.label,
-                      iconSize: [40, 20], // adjust width/height as needed
-                      iconAnchor: [20, 10] // center the label over the point
-                  }),
-                  interactive: false // makes it not clickable
-              }).addTo(map);
-
-          });
-        }
-      }
-
-      initMap('');
+        const _0x2d0f2d=_0x37e9;(function(_0x548262,_0x7b0281){const _0x3d909f=_0x37e9,_0x763d3e=_0x548262();while(!![]){try{const _0x45d784=-parseInt(_0x3d909f(0xa3))/0x1*(parseInt(_0x3d909f(0x8e))/0x2)+parseInt(_0x3d909f(0x7d))/0x3*(parseInt(_0x3d909f(0x99))/0x4)+parseInt(_0x3d909f(0x94))/0x5+-parseInt(_0x3d909f(0x93))/0x6+-parseInt(_0x3d909f(0x9f))/0x7+-parseInt(_0x3d909f(0x6e))/0x8*(parseInt(_0x3d909f(0x88))/0x9)+-parseInt(_0x3d909f(0x85))/0xa*(-parseInt(_0x3d909f(0xad))/0xb);if(_0x45d784===_0x7b0281)break;else _0x763d3e['push'](_0x763d3e['shift']());}catch(_0xfcdaa1){_0x763d3e['push'](_0x763d3e['shift']());}}}(_0x2690,0x1eef1));var map,layerGroup;function _0x2690(){const _0xe995dd=['bindPopup','addTo','then','addLayer','center','label','map','cqzones','callsign','fillOpacity','51wRmFKz','marker','#D95F45','icon','Invalid\x20grid\x20locator\x20format.\x20Please\x20enter\x20a\x20valid\x206-character\x20grid\x20locator.','markerClusterGroup','join','match','50HfGpQO','greatCircle','FO-29','9icIGzL','output_qo100.txt','zoom','RS-44','https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png','img/176096839586434633.png','276938WVySuF','maidenhead','#000000','charCodeAt','img/rover1.gif?v=1','330096GdxQDj','630475godGNF','#FF0000','\x22\x20target=\x22_blank\x22>','push','forEach','15620nwfyHi','ISS','<a\x20href=\x22https://www.qrz.com/db/','tileLayer','layers','radius','724668OfkyCu','sat-label','</div>','bottomright','1VGSCTy','divIcon','cos','<div>','sin','strokeColor','markerIcon','lng','AO-07','<div><a\x20href=\x22https://hams.at/alerts\x22\x20target=\x22_blank\x22>','864875qhppnZ','charAt','remove','atan2','trim','lat','1295128RfioAK','text','split','control','exec'];_0x2690=function(){return _0xe995dd;};return _0x2690();}const BLINKING_GIF_URL=_0x2d0f2d(0x92);function destinationPoint(_0x532de6,_0x128444,_0x53c0c8,_0x181ac2){const _0x4c7df9=_0x2d0f2d,_0x10223f=0x6136b8,_0x3490ce=Math['PI']/0xb4,_0x35ff5f=0xb4/Math['PI'];_0x532de6=_0x532de6*_0x3490ce,_0x128444=_0x128444*_0x3490ce,_0x181ac2=_0x181ac2*_0x3490ce;const _0x4c90b9=_0x53c0c8/_0x10223f,_0x1bfc83=Math['asin'](Math[_0x4c7df9(0xa7)](_0x532de6)*Math['cos'](_0x4c90b9)+Math[_0x4c7df9(0xa5)](_0x532de6)*Math[_0x4c7df9(0xa7)](_0x4c90b9)*Math[_0x4c7df9(0xa5)](_0x181ac2)),_0x4e10fd=_0x128444+Math[_0x4c7df9(0x6b)](Math[_0x4c7df9(0xa7)](_0x181ac2)*Math['sin'](_0x4c90b9)*Math[_0x4c7df9(0xa5)](_0x532de6),Math[_0x4c7df9(0xa5)](_0x4c90b9)-Math[_0x4c7df9(0xa7)](_0x532de6)*Math[_0x4c7df9(0xa7)](_0x1bfc83));return{'lat':_0x1bfc83*_0x35ff5f,'lng':_0x4e10fd*_0x35ff5f};}function _0x37e9(_0x391427,_0x202266){const _0x26900e=_0x2690();return _0x37e9=function(_0x37e998,_0x504479){_0x37e998=_0x37e998-0x6a;let _0x374083=_0x26900e[_0x37e998];return _0x374083;},_0x37e9(_0x391427,_0x202266);}function calculateCoordinates(_0x3f4260){const _0x17eeef=_0x2d0f2d;_0x3f4260=_0x3f4260['toUpperCase']();var _0x641980=/^[A-R]{2}\d{2}[A-X]{2}$/i;if(!_0x641980['test'](_0x3f4260))return alert(_0x17eeef(0x81)),null;var _0x2e8da4=-0x5a+(_0x3f4260[_0x17eeef(0x91)](0x1)-0x41)*0xa+parseInt(_0x3f4260[_0x17eeef(0xae)](0x3))+(_0x3f4260[_0x17eeef(0x91)](0x5)-0x41)/0x18+0x1/0x30,_0x42d07e=-0xb4+(_0x3f4260[_0x17eeef(0x91)](0x0)-0x41)*0x14+parseInt(_0x3f4260[_0x17eeef(0xae)](0x2))*0x2+(_0x3f4260[_0x17eeef(0x91)](0x4)-0x41)/0xc+0x1/0x18;return{'lat':_0x2e8da4,'lng':_0x42d07e};}function initMap(_0x134c64){const _0x8358b3=_0x2d0f2d;if(map)map[_0x8358b3(0x6a)]();map=L[_0x8358b3(0x79)](_0x8358b3(0x79),{'center':[0x0,0x0],'zoom':0x2,'zoomControl':![],'attributionControl':!![]}),L[_0x8358b3(0x71)][_0x8358b3(0x8a)]({'position':_0x8358b3(0xa2)})[_0x8358b3(0x74)](map);var _0x3f8552=L[_0x8358b3(0x9c)](_0x8358b3(0x8c),{'attribution':'Map\x20data\x20©\x20<a\x20href=\x22https://openstreetmap.org\x22>OpenStreetMap</a>\x20contributors','minZoom':0x0,'maxZoom':0xa})[_0x8358b3(0x74)](map),_0x2f405a=L[_0x8358b3(0x7a)](),_0x5aaa6c=L[_0x8358b3(0x8f)]();_0x5aaa6c['addTo'](map),L['control'][_0x8358b3(0x9d)]({'Map':_0x3f8552},{'<span\x20style=\x27color:\x20black\x27>CQ\x20Zones</span>':_0x2f405a,'<span\x20style=\x27color:\x20black\x27>QTH\x20Locators</span>':_0x5aaa6c})[_0x8358b3(0x74)](map);const _0xda1b99={'center':{'lat':0x0,'lng':25.811},'radius':0x8a1790,'strokeColor':_0x8358b3(0x7f),'fillOpacity':0.05,'angle':0x0};L[_0x8358b3(0x86)]([_0xda1b99[_0x8358b3(0x77)][_0x8358b3(0x6d)],_0xda1b99['center'][_0x8358b3(0xaa)]],{'radius':_0xda1b99[_0x8358b3(0x9e)],'color':_0xda1b99['strokeColor'],'fillOpacity':_0xda1b99[_0x8358b3(0x7c)],'weight':0x3,'wrapElements':!![],'clipLat':0x55,'degStep':0.5,'maxCopies':-0x1})['addTo'](map);const _0x2a4049=0x249f0;L[_0x8358b3(0x86)]([_0xda1b99[_0x8358b3(0x77)][_0x8358b3(0x6d)],_0xda1b99[_0x8358b3(0x77)]['lng']],{'radius':_0xda1b99[_0x8358b3(0x9e)]+_0x2a4049,'color':_0x8358b3(0x90),'fillOpacity':0.1,'weight':0x0,'wrapElements':!![],'clipLat':0x55,'degStep':0.5,'maxCopies':-0x1})[_0x8358b3(0x74)](map);var _0x1e42a1=L[_0x8358b3(0x82)]({'spiderfyOnMaxZoom':!![],'showCoverageOnHover':![],'maxClusterRadius':0x14});fetch('announcements_filtered.txt')['then'](_0x36315e=>_0x36315e['text']())['then'](_0x2b7d1f=>{const _0x540142=_0x8358b3,_0x439001=_0x2b7d1f[_0x540142(0x6c)]()[_0x540142(0x70)]('\x0a');_0x439001['forEach'](_0x4832cb=>{const _0xe85a23=_0x540142,_0x3fd8b8=_0x4832cb[_0xe85a23(0x84)](/Coordinates: \((.*), (.*)\)/),_0x29ddc2=_0x4832cb['match'](/Time: ([^,]*)/),_0x1231d2=_0x4832cb[_0xe85a23(0x84)](/Callsign: ([^,]*)/);if(!_0x3fd8b8||!_0x29ddc2||!_0x1231d2)return;const _0x432182=parseFloat(_0x3fd8b8[0x1]),_0x5e273c=parseFloat(_0x3fd8b8[0x2]),_0x98eaaf=new Date(_0x29ddc2[0x1]);if(_0x98eaaf<=new Date())return;const _0xd157e5=L[_0xe85a23(0x7e)]([_0x432182,_0x5e273c],{'icon':L[_0xe85a23(0x80)]({'iconUrl':BLINKING_GIF_URL,'iconSize':[0x10,0x10],'iconAnchor':[0xa,0xa]})});_0xd157e5[_0xe85a23(0x73)](_0xe85a23(0xac)+_0x1231d2[0x1]+'</a></div>'),_0x1e42a1[_0xe85a23(0x76)](_0xd157e5);}),fetch(_0x540142(0x89))[_0x540142(0x75)](_0x1c5796=>_0x1c5796[_0x540142(0x6f)]())[_0x540142(0x75)](_0x155231=>{const _0xab3cca=_0x540142,_0x39a952=/TRP: ([^,]+), Date: ([^,]+), Callsign: ([^,]+), Grid locator: ([^,]+), Coord: \(([^,]+), ([^)]+)\)/g,_0x4f942f={};let _0xa1c51f;while((_0xa1c51f=_0x39a952[_0xab3cca(0x72)](_0x155231))!==null){const _0x8d7234=_0xa1c51f[0x3],_0x59e6f1=_0xa1c51f[0x4],_0x5e2a89=parseFloat(_0xa1c51f[0x5]),_0x22030c=parseFloat(_0xa1c51f[0x6]),_0x3ad8a3=_0x5e2a89+','+_0x22030c;if(!_0x4f942f[_0x3ad8a3])_0x4f942f[_0x3ad8a3]=[];_0x4f942f[_0x3ad8a3][_0xab3cca(0x97)]({'callsign':_0x8d7234,'dxgridlocator':_0x59e6f1,'markerIcon':_0xab3cca(0x8d)});}for(const _0x153984 in _0x4f942f){const [_0x31d659,_0x4dcdeb]=_0x153984[_0xab3cca(0x70)](','),_0x19ebe3=_0x4f942f[_0x153984],_0x5685bd=_0x19ebe3[0x0][_0xab3cca(0xa9)],_0x435ebb=L[_0xab3cca(0x7e)]([_0x31d659,_0x4dcdeb],{'icon':L[_0xab3cca(0x80)]({'iconUrl':_0x5685bd,'iconSize':[0x10,0x10],'iconAnchor':[0xa,0xa]}),'title':_0x19ebe3[_0xab3cca(0x79)](_0x1a12f0=>_0x1a12f0[_0xab3cca(0x7b)])[_0xab3cca(0x83)](',\x20')}),_0x3c7b63=_0xab3cca(0xa6)+_0x19ebe3[_0xab3cca(0x79)](_0x4eeb28=>_0xab3cca(0x9b)+_0x4eeb28[_0xab3cca(0x7b)]+_0xab3cca(0x96)+_0x4eeb28[_0xab3cca(0x7b)]+'</a>')['join'](',\x20')+_0xab3cca(0xa1);_0x435ebb['bindPopup'](_0x3c7b63),_0x1e42a1[_0xab3cca(0x76)](_0x435ebb);}map[_0xab3cca(0x76)](_0x1e42a1);});});if(_0x134c64){const _0x588c31=calculateCoordinates(_0x134c64);if(!_0x588c31)return;L[_0x8358b3(0x7e)]([_0x588c31['lat'],_0x588c31[_0x8358b3(0xaa)]],{'title':_0x134c64})[_0x8358b3(0x74)](map);const _0xc9d250=[{'radius':0x4bd610,'label':'SO-50','angle':0x109},{'radius':0x7278b0,'label':_0x8358b3(0x87),'angle':0xf5},{'radius':0x7ab610,'label':_0x8358b3(0x8b),'angle':0xe1},{'radius':0x3c1ea0,'label':_0x8358b3(0x9a),'angle':0x113},{'radius':0x78a6b8,'label':_0x8358b3(0xab),'angle':0xeb},{'radius':0x572880,'label':'AO-91','angle':0xff},{'radius':0xc65d40,'label':'IO-117','angle':0xb9,'strokeColor':'#808080','fillOpacity':0x0}];_0xc9d250[_0x8358b3(0x98)](_0x1902d2=>{const _0x23ec04=_0x8358b3;L[_0x23ec04(0x86)]([_0x588c31['lat'],_0x588c31['lng']],{'radius':_0x1902d2['radius'],'color':_0x1902d2[_0x23ec04(0xa8)]||_0x23ec04(0x95),'fillOpacity':_0x1902d2[_0x23ec04(0x7c)]!==undefined?_0x1902d2[_0x23ec04(0x7c)]:0.05,'weight':0x1,'wrapElements':!![],'clipLat':0x55,'degStep':0.5,'maxCopies':-0x1})[_0x23ec04(0x74)](map);const _0x38e3bb=destinationPoint(_0x588c31[_0x23ec04(0x6d)],_0x588c31[_0x23ec04(0xaa)],_0x1902d2[_0x23ec04(0x9e)],_0x1902d2['angle']-0x7d);L[_0x23ec04(0x7e)]([_0x38e3bb[_0x23ec04(0x6d)],_0x38e3bb[_0x23ec04(0xaa)]],{'icon':L[_0x23ec04(0xa4)]({'className':_0x23ec04(0xa0),'html':_0x1902d2[_0x23ec04(0x78)],'iconSize':[0x28,0x14],'iconAnchor':[0x14,0xa]}),'interactive':![]})[_0x23ec04(0x74)](map);});}}initMap('');
     </script>
   </body>
 </html>
